<resources>
    <string name="app_name">Gadget Flow</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1540976439531633</string>

    <!-- Activity Log In Start -->
    <string name="login_screen_welcome">We Help You Discover, Save and Buy\nAwesome Products</string>
    <string name="login_screen_fb">CONNECT WITH FACEBOOK</string>
    <string name="login_screen_skip">skip for now</string>
    <!-- Activity Log In End -->

    <!-- Activity Log In 2 Start -->
    <string name="login_in_screen_2_username">Username</string>
    <string name="login_in_screen_2_pass">Password</string>
    <string name="login_in_screen_2_reset">Reset My Password</string>
    <!-- Activity Log In 2 End -->

    <!--Sign Up -->
    <string name="create_account">Create Your Account</string>

    <!-- Reset Password Start-->
    <string name="reset_password_email">Email</string>
    <string name="reset_password_mail">You should receive an email within the next\n30 seconds.</string>
    <!-- Reset Password End-->

    <!-- Feed Start -->
    <string name="gadget_save_feed">SAVE</string>
    <string name="gadget_share_feed">SHARE</string>
    <string name="process_dialog_swipe_refresh">Refreshing</string>
    <!-- Feed End -->

    <!-- Filters Start -->
    <string name="latest_products">Latest Products</string>
    <string name="oldest_products">Oldest Products</string>
    <string name="highest_price">Price Descending</string>
    <string name="lowest_price">Price Ascending</string>
    <string name="recommended">Recommended</string>

    <string-array name="spinner_array">
        <item>Latest Products</item>
        <item>Oldest Products</item>
        <item>Price Descending</item>
        <item>Price Ascending</item>
    </string-array>
    <string name="spinner_hint">Sort By:</string>
    <!-- Filters End -->

    <!-- Settings Start -->
    <string name="settings_edit_profile">Edit profile</string>
    <string name="settings_Log_out">Log out</string>
    <string name="settings_subscribe">Subscribe To Our Newsletter</string>
    <string name="settings_intercon">Contact and Support</string>
    <string name="settings_press">Press and Media</string>
    <string name="settings_hiring">We Are Hiring</string>
    <string name="settings_Log_in">Log in</string>
    <string name="settings_contact_us">Contact Us</string>
    <string name="settings_youtube">Subscribe on Youtube</string>
    <string name="settings_faqs">Help Center</string>
    <string name="settings_labs">Labs</string>
    <string name="settings_about_us">About Us</string>
    <string name="settings_blog">Blog</string>
    <string name="settings_terms">Terms of Use</string>
    <string name="settings_privacy">Privacy Policy</string>
    <string name="settings_status">Status</string>
    <string name="settings_official_shop">Official Shop</string>
    <!-- Settings End -->

    <!-- Edit Profile Activity Start -->
    <string name="edit_profile_wish_list">Wish List Public</string>
    <string name="edit_profile_fullname">First Name:</string>
    <string name="edit_profile_change_mail">Change your Email</string>
    <string name="edit_profile_change_pass">Change your Password</string>
    <string name="edit_profile_indication_password">New Password</string>
    <string name="edit_profile_indications_pass_conf">Confirm New Password</string>

    <!-- Dialogs Inside Settings -->
    <string name="edit_profile_popup_change_mail">Change E-mail</string>
    <string name="edit_profile_popup_cancel">Cancel</string>
    <string name="edit_profile_popup_done">Done</string>
    <string name="edit_profile_popup_change_password">Change My Password</string>
    <string name="edit_profile_popup_change_name">Change Name</string>
    <string name="edit_profile_popup_fb_change">Change Facebook Link</string>
    <string name="edit_profile_popup_twitter">Change Twitter Link</string>
    <!-- Edit Profile Activity End-->

    <!-- Gadget details Start -->
    <string name="gadget_details_save_wishlist">Save</string>
    <string name="gadget_details_saved_wishlist">Saved</string>
    <string name="gadget_details_error_loading_images">Error Loading Image</string>
    <string name="gadget_details_buy">Buy Now</string>
    <string name="title_activity_gadget_flow_detail">GadgetFlowDetail</string>
    <!-- Gadget details Details End-->

    <!-- Search Start -->
    <string name="search_apologies">Sorry, Nothing Found</string>
    <string name="search__try_again">How About Trying Another Search</string>
    <!-- Search End -->

    <!-- Wish List Start -->
    <string name="wish_list_title">Login Required</string>
    <string name="wish_list_desc">Create an Account or Login to your Existing one to Access Your Wish List</string>
    <string name="wish_list_bt">log in</string>
    <string name="wish_list_bt_pop_up">Ok</string>
    <string name="alert_dialog_empty_wish_list">Try to add a few Items first.</string>
    <string name="alert_dialog_empty_wish_list_title">Your wish list is empty</string>
    <!-- Wish List End -->

    <!-- Discount  Start -->
    <string name="discounts_title">Members Only Area</string>
    <string name="discounts_desc">Sign in or Register to access our exclusive deals and discounts</string>
    <string name="discounts_bt">GET ACCESS FOR FREE</string>
    <!-- Discount  End -->

    <!-- Action bar Start -->
    <string name="action_bar_discounts">Discounts</string>
    <string name="action_bar_categories">Categories</string>
    <string name="action_bar_wish_list">My Wish List</string>
    <string name="action_bar_settings">More</string>
    <string name="action_bar_edit_prof">Edit Profile</string>
    <!-- Action bar End -->


</resources>
