<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_unsigned_wish_list">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gadget_flow_cat"
            android:id="@+id/flow_cat"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wish_list_title"
            android:textColor="@color/login_required_header"
            android:textSize="26sp"
            android:textStyle="bold"
            android:id="@+id/text_login_in"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/flow_cat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wish_list_desc"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/text_login_in"
            android:id="@+id/wish_list_string_02"
            android:textStyle="normal"
            android:textColor="@color/login_required_details"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:id="@+id/button_wish_list_button"
            android:text="@string/wish_list_bt"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_login_wish_list"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:layout_below="@+id/wish_list_string_02"
            />
    </RelativeLayout>
</RelativeLayout>