<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimary"
    tools:context="com.example.vasilis.TheGadgetFlow.LogInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/logo_container">

        <ImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/logo"
            android:id="@+id/logo_initial"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top_logo_login_activity" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_screen_welcome"
            android:textColor="#fff"
            android:gravity="center"
            android:textSize="@dimen/size_sp_app_desc"
            android:id="@+id/app_description"
            android:layout_below="@+id/logo_initial"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_top_app_desc" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_log_in"
        android:layout_above="@+id/login_button_facebook"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_top_ll_log_in"
        android:layout_marginRight="@dimen/margin_left_right_ll_log_in"
        android:layout_marginStart="@dimen/margin_left_right_ll_log_in"
        android:layout_marginLeft="@dimen/margin_left_right_ll_log_in"
        android:layout_marginEnd="@dimen/margin_left_right_ll_log_in">

        <Button
            android:layout_width="0dp"
            android:id="@+id/logIn"
            android:text="LOG IN"
            style="@style/Login_Buttons"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right_left_log_in_sign_up_button"/>

        <Button
            android:layout_width="0dp"
            android:id="@+id/signUp"
            style="@style/Login_Buttons"
            android:text="SIGN UP"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/margin_right_left_log_in_sign_up_button"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:id="@+id/login_button_facebook"
        android:layout_above="@+id/skip_for_now"
        android:text="@string/login_screen_fb"
        style="@style/Login_Buttons"
        android:layout_marginRight="@dimen/margin_left_right_ll_log_in"
        android:layout_marginStart="@dimen/margin_left_right_ll_log_in"
        android:layout_marginLeft="@dimen/margin_left_right_ll_log_in"
        android:layout_marginEnd="@dimen/margin_left_right_ll_log_in"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_skip"
        android:textColor="@color/skip_for_now_color"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_left_right_ll_log_in"
        android:layout_marginBottom="@dimen/margin_left_right_ll_log_in"
        android:id="@+id/skip_for_now"
        android:textSize="@dimen/skip_for_now_size_text"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
